--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "chart.js": "^3.8.0",
+    "date-fns": "^2.29.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "luxon": "^3.0.1",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
     "mysql-client": "^0.3.0",
