--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "full-icu": "^1.4.0",
     "luxon": "^3.0.1",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
